# OpenGL-Demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  run.sh
application/: CMakeLists.txt
application/src/: Input.cpp  Input.h  OrbitCamera.h  Util.h  main.cpp
shaders/: basic.frag  basic.vert  light.frag  light.vert
